# job-application-tracker

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 3b5f8d8f53c9_create_jobs_table.py  47b612672f6f_create_applications_table.py  8530cf629a71_add_users_table_and_per_user_.py
app/: main.py
app/api/: deps.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: __init__.py  application.py  job.py  user.py
app/routers/: applications.py  auth.py  jobs.py
app/schemas/: application.py  job.py  user.py
app/scrapers/: arbeitnow.py  base.py  remoteok.py  remotive.py
app/services/: ingest.py  notifier.py  scheduler.py
app/static/: app.js  i18n.js  index.html  style.css
tests/: conftest.py  test_api.py  test_auth.py  test_ingest.py  test_scrapers.py
