[project]
name = "job-application-tracker"
version = "0.1.0"
description = "Job-listing tracker and auto-scraper: FastAPI + PostgreSQL + Docker, with Telegram notifications"
authors = [{ name = "Faten Jadly", email = "faten.jadly@polytechnicien.tn" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "truststore>=0.9",
    "apscheduler>=3.10,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
